--- a/test-apps/quarkus-rest-mongo/src/main/resources/META-INF/resources/fruits.html
+++ b/test-apps/quarkus-rest-mongo/src/main/resources/META-INF/resources/fruits.html
@@ -85,12 +85,14 @@
 
     <h3>Fruit List</h3>
     <div class="row">
-        <div class="col-4">Name</div>
-        <div class="col-8">Description</div>
+        <div class="col-4">Id</div>
+        <div class="col-2">Name</div>
+        <div class="col-6">Description</div>
     </div>
     <div class="row" ng-repeat="fruit in fruits">
-        <div class="col-4">{{ fruit.name }}</div>
-        <div class="col-8">{{ fruit.description }}</div>
+        <div class="col-4">{{ fruit.id }}</div>
+        <div class="col-2">{{ fruit.name }}</div>
+        <div class="col-6">{{ fruit.description }}</div>
     </div>
 </div>
 
